# tweet-scraper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: format_py.sh  guard_paths.sh
.github/workflows/: ci.yml
scraper/: conftest.py  pyproject.toml  requirements-dev.txt  tweet_scraper.py  tweets.sample.csv  vars.example.json
scraper/tests/: test_config.py  test_dates.py  test_main_streaming.py  test_paging.py  test_query.py  test_tweet_scraper.py
scraper/tweet_scraper/: __init__.py  __main__.py  api.py  cli.py  config.py  query.py
studio/: index.html  package-lock.json  package.json  vitest.config.js
studio/src/: App.jsx
studio/src/components/: BrandsTab.jsx  CaptionStudio.jsx  OverviewTab.jsx  TweetsTab.jsx  UploadCard.jsx  primitives.jsx
studio/src/lib/: analysis.js  analysis.test.js  csv.js  csv.test.js  display.js  display.test.js  lexicons.js  lexicons.test.js  stats.js  stats.test.js
