# Tooling configuration ONLY — this is intentionally NOT a packaging manifest.
# There is no [project] table yet; turning this repo into an installable
# package (entry points, versioning) is deferred — see README "Roadmap".

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["tweet_scraper"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
