[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tweet-scraper"
version = "0.1.0"
description = "Pay-per-use X (Twitter) tweet scraper via twitterapi.io"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["requests>=2.31.0"]

[project.scripts]
tweet-scraper = "tweet_scraper:main"

[tool.setuptools]
py-modules = ["tweet_scraper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["tweet_scraper"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
